--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Hello, Rails!</h1>
-<%= Rails.env %>
+<!-- link_to is part of ruby's built in helper methods to generate proper hyperlinks. Should check up on docs later. -->
+<%= link_to 'My Blog', controller: 'articles' %>
